--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <title>coffee?</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
     </head>
 
     <body>
+        <div class="native">
+            hello from Jie and Yao @ Montreal
+        </div>
 
-        hello world!
     </body>
-
 </html>
