--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
     <head>
         <title>coffee?</title>
-        <link rel="stylesheet" href="style.css">
+
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+
+        <style>
+            .native{
+            font-family: 'Josefin Sans', sans-serif;
+            font-size: 100px;
+}
+
+        </style>
     </head>
 
     <body>
