linked back css

--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>coffee?</title>
-
+        
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+        <link rel ="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-
+        <title>coffee?</title>
+        <link rel="icon" type="image/png" href="https://www.google.com/url?sa=i&url=http%3A%2F%2Fwww.pngall.com%2Fcafe-png%2Fdownload%2F41806&psig=AOvVaw0GrLk2IiaT7p0Xkt0rYh9r&ust=1618616985217000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNC8mqi4gfACFQAAAAAdAAAAABAD">
         <style>
-            .native{
-            font-family: 'Josefin Sans', sans-serif;
-            font-size: 100px;
-}
 
         </style>
     </head>
