added xy_lj image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section>
             <article>
               <h2>妈妈与谢垚</h2>
-              <img class="pic" src="image/mama_xy.jpg" alt="family photo">
+              <img class="pic" src="image/mama_xy.jpg" alt="family photo" width="100%">
               <h5>摄于佛罗里达</h5>
             </article>
       
