--- a/index.html
+++ b/index.html
@@ -16,26 +16,20 @@
 
     <body>
         <div class="native">
-            hello from Jie and Yao @ Montreal
+            bonjour, mon amis!
         </div>
 
         <section>
             <article>
-              <h2>妈妈与谢垚</h2>
-              <img class="pic" src="image/mama_xy.jpg" alt="family photo" width="100%">
-              <h5>摄于佛罗里达</h5>
+              <h2>Text Box #1</h2>
             </article>
       
             <article>
-              <h2>妈妈</h2>
-              <img class="pic" src="image/mama.jpg" alt="family photo">
-              <h5>摄于安吉</h5>
+              <h2>Text Box #2</h2>
             </article>
       
             <article>
-              <h2>谢垚与林杰</h2>
-              <img class="pic" src="image/xy_lj.jpg" alt="family photo">
-              <h5>摄于佛罗里达</h5>
+              <h2>Text Box #3</h2>
             </article>
           </section>
 
