added hello world!

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <body>
         <div class="native">
-            bonjour, mon amis!
+            bonjour, mon amis! hello world!
         </div>
 
         <section>
