changed to watchlist

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Crypto Portfolio</title>
+        <title>Crypto Watchlist</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -16,31 +16,28 @@
     <body>
         <div>
             <div id="element-to-print">
-                <h2>My Crypto Portfolio</h2>
-                <p>🚀  as of <strong id='update_date'>____</strong> my cumulative return is: <strong id='cumulative_return'>____</strong>  🚀</p>
+                <h2>My Crypto Watch List</h2>
+                <p>🚀  as of <strong id='update_date'>____</strong>  🚀</p>
                 <p id='uom'>(in USD)</p>
                 <table id='table_view'>
                     <tr>
                         <th>Name</th>
                         <th>Symbol</th>
                         <th>Icon</th>
+                        <th>Category</th>
                         <th>Market Price</th>
                         <th>Price Change % 24h</th>
-                        <th>Holding Quantity</th>
-                        <th>Holding Value</th>
+                        <th>Market Cap ($bn)</th>
+                        <th>Fully Diluted Valuation ($bn)</th>
+                        <th>Coingecko Score</th>
+                        <th>Developer Score</th>
+                        <th>Community Score</th>
+                        <th>Liquidity Score</th>
                     </tr>
                     <tbody id='table_content'>
 
                     </tbody>
-                    <tr id='row_total'>
-                        <td>Total Value</td>
-                        <td>🍀</td>
-                        <td>🍀</td>
-                        <td>🍀</td>
-                        <td>🍀</td>
-                        <td>🍀</td>
-                        <td id='total_value'></td>
-                    </tr>        
+ 
                 </table>
                 <p></p>
                 <a href="https://www.coingecko.com/en">Data provided by coingecko</a>
