added mobile-friendly css

--- a/index.html
+++ b/index.html
@@ -16,24 +16,26 @@
     <body>
         <div>
             <div id="element-to-print">
-                <h2>My Crypto Watch List</h2>
-                <p>🚀  as of <strong id='update_date'>____</strong>  🚀</p>
-                <p id='uom'>(in USD)</p>
+                <h2 class='headings'>My Crypto Watch List</h2>
+                <p class='headings'>🚀  as of <strong id='update_date'>____</strong>  🚀</p>
+                <p  class='headings' id='uom'>(in USD)</p>
                 <table id='table_view'>
-                    <tr>
-                        <th>Name</th>
-                        <th>Symbol</th>
-                        <th>Icon</th>
-                        <th>Category</th>
-                        <th>Market Price</th>
-                        <th>Price Change % 24h</th>
-                        <th>Market Cap ($bn)</th>
-                        <th>Fully Diluted Valuation ($bn)</th>
-                        <th>Coingecko Score</th>
-                        <th>Developer Score</th>
-                        <th>Community Score</th>
-                        <th>Liquidity Score</th>
-                    </tr>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Symbol</th>
+                            <th>Icon</th>
+                            <th>Category</th>
+                            <th>Market Price</th>
+                            <th>Price Change % 24h</th>
+                            <th>Market Cap ($bn)</th>
+                            <th>Fully Diluted Valuation ($bn)</th>
+                            <th>Coingecko Score</th>
+                            <th>Developer Score</th>
+                            <th>Community Score</th>
+                            <th>Liquidity Score</th>
+                        </tr>
+                    </thead>
                     <tbody id='table_content'>
 
                     </tbody>
