--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                             <th>Symbol</th>
                             <th>Icon</th>
                             <th>Category</th>
-                            <th>Market Price</th>
-                            <th>Price Change % 24h</th>
+                            <th>Market Price ($)</th>
+                            <th>Price Change - 24h</th>
                             <th>Market Cap ($bn)</th>
                             <th>Fully Diluted Valuation ($bn)</th>
                             <th>Coingecko Score</th>
